src/test/ui/associated-types/bound-lifetime-in-return-only.ok.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/bound-lifetime-in-return-only.rs:49:1
   |
LL | fn main() { }
   | ^^^^^^^^^^^^^

error: aborting due to previous error

